[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nparseplus"
version = "0.8.0"
description = "nParse+ — EverQuest Project 1999 log parser: maps, spell timers, triggers, DPS, and sharing. A modernized fork of nomns/nparse with EQTool feature parity."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
  { name = "nomns" },
  { name = "ccaldwell" },
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "PySide6>=6.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "signalrcore>=0.9.5",
  "platformdirs>=4.2",
  "Pillow>=10.3",
  "packaging>=24.0",
  "colorhash>=2.0",
  "pathvalidate>=3.2",
  "websocket-client>=1.8",
]

[project.urls]
Homepage = "https://github.com/nomns/nparse"

[project.gui-scripts]
nparseplus = "nparseplus.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov",
  "pytest-qt",
  "ruff>=0.5",
  "mypy>=1.10",
]
build = [
  "pyinstaller>=6.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nparseplus"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
markers = [
  "qt: tests that require a Qt platform (run with QT_QPA_PLATFORM=offscreen)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Legacy nparse modules are grandfathered until rewritten (M1/M2); new code must be clean.
"src/nparseplus/helpers/*" = ["E722", "E501", "UP031", "E712", "F401", "SIM", "RUF", "E402", "E721", "E741", "B"]
"src/nparseplus/parsers/*" = ["E722", "E501", "UP031", "E712", "F401", "SIM", "RUF", "E402", "E721", "E741", "B"]
"locationserver/*" = ["E722", "E501", "UP031", "SIM", "RUF", "B"]
"data/*" = ["ALL"]
# Verbatim regex/search-text transcriptions from EQTool's C# source must not be wrapped.
"tools/convert_builtin_triggers.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["nparseplus.core", "nparseplus.config", "nparseplus.net"]
mypy_path = "src"
strict = false
check_untyped_defs = true
