[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nparseplus"
version = "1.4.0"
description = "nParse+ — EverQuest Project 1999 log parser: maps, spell timers, triggers, DPS, and sharing. A modernized fork of nomns/nparse with EQTool feature parity."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
  { name = "nomns" },
  { name = "ccaldwell" },
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "PySide6>=6.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "signalrcore>=0.9.5",
  "platformdirs>=4.2",
  "Pillow>=10.3",
  "packaging>=24.0",
  "colorhash>=2.0",
  "pathvalidate>=3.2",
  "websocket-client>=1.8",
  "certifi>=2024.2.2",  # pinned CA store for websocket-client (frozen app)
]

[project.urls]
Homepage = "https://github.com/prokopto-dev/nparse-plus"

[project.gui-scripts]
nparseplus = "nparseplus.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov",
  "pytest-qt",
  "ruff>=0.5",
  "mypy>=1.10",
  "python-semantic-release>=10.6.1",
]
build = [
  "dmgbuild>=1.6.7",
  "pyinstaller>=6.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nparseplus"]

[tool.semantic_release]
tag_format = "v{version}"
commit_message = "chore(release): v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/nparseplus/__init__.py:__version__"]
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
exclude_commit_patterns = ["^chore\\(release\\):"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
markers = [
  "qt: tests that require a Qt platform (run with QT_QPA_PLATFORM=offscreen)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Legacy nparse modules are grandfathered until rewritten (M1/M2); new code must be clean.
"src/nparseplus/helpers/*" = ["E722", "E501", "UP031", "E712", "F401", "SIM", "RUF", "E402", "E721", "E741", "B"]
"src/nparseplus/parsers/*" = ["E722", "E501", "UP031", "E712", "F401", "SIM", "RUF", "E402", "E721", "E741", "B"]
"locationserver/*" = ["E722", "E501", "UP031", "SIM", "RUF", "B"]
"data/*" = ["ALL"]
# Verbatim regex/search-text transcriptions from EQTool's C# source must not be wrapped.
"tools/convert_builtin_triggers.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["nparseplus.core", "nparseplus.config", "nparseplus.net"]
mypy_path = "src"
strict = false
check_untyped_defs = true
